Логическая починка тестов